--- a/index.html
+++ b/index.html
@@ -5,6 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VibePush — Stop writing YAML. Start shipping.</title>
     <meta name="description" content="MCP-native deployment platform. Any AI agent can deploy, monitor, and fix your apps on your own servers. Open source, self-hosted.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vibepush.dev/">
+    <meta property="og:title" content="VibePush — Stop writing YAML. Start shipping.">
+    <meta property="og:description" content="MCP-native deployment platform. Any AI agent can deploy, monitor, and fix your apps on your own servers.">
+    <meta property="og:image" content="https://vibepush.dev/og-image.svg">
+    <meta property="og:site_name" content="VibePush">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://vibepush.dev/">
+    <meta name="twitter:title" content="VibePush — Stop writing YAML. Start shipping.">
+    <meta name="twitter:description" content="MCP-native deployment platform. Any AI agent can deploy, monitor, and fix your apps on your own servers.">
+    <meta name="twitter:image" content="https://vibepush.dev/og-image.svg">
+
+    <!-- Additional SEO -->
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="VibePush">
+    <meta name="keywords" content="MCP, deployment, AI, DevOps, Kubernetes, K3s, self-hosted, PaaS, Claude, GPT, infrastructure">
+    <link rel="canonical" href="https://vibepush.dev/">
+
+    <!-- Theme -->
+    <meta name="theme-color" content="#f97316">
+    <meta name="msapplication-TileColor" content="#f97316">
+
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "VibePush",
+        "applicationCategory": "DeveloperApplication",
+        "operatingSystem": "Linux",
+        "description": "MCP-native deployment platform. Any AI agent can deploy, monitor, and fix your apps on your own servers.",
+        "url": "https://vibepush.dev",
+        "author": {
+            "@type": "Organization",
+            "name": "VibePush",
+            "url": "https://vibepush.dev"
+        },
+        "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+        },
+        "license": "https://www.gnu.org/licenses/agpl-3.0.html",
+        "isAccessibleForFree": true,
+        "keywords": ["MCP", "deployment", "AI", "DevOps", "Kubernetes", "K3s", "self-hosted"]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "VibePush",
+        "url": "https://vibepush.dev",
+        "description": "MCP-native deployment platform for AI agents",
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://github.com/vibepush-dev/vibepush/search?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+        }
+    }
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
